fixed overflow

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -838,6 +838,7 @@
 .charsheet input.settings:checked~div.settings {
     display: inline-block;
     margin-top: -30px;
+    overflow: hidden;
 }
 
 .charsheet input.monster_only:checked~div.character .toggle-monster-only {
@@ -1019,6 +1020,7 @@
     color: #000;
     font-family: "IM Fell English", "Times New Roman", Times, serif;
     min-width: 827px;
+    overflow: hidden;
     padding: 70px 0 50px 0;
     width: 100%;
 }
@@ -2004,6 +2006,7 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 .charsheet .monster-stats-box18 {
     grid-column-start: 8;
     grid-row-start: 2;
+    width: 3em;
 }
 
 .charsheet .monster-stats-box19 {
@@ -2097,10 +2100,10 @@ button[title*="torches}"].roll-button-textonly.header-h1:hover::after {
 
 .charsheet .details-grid {
     display: grid;
-    grid-column-gap: 2px;
+    grid-column-gap: 6px;
     grid-row-gap: 1em;
-    grid-template-columns: auto 2.5em 2em auto 2.5em;
-    padding: 2em 0 2em 0;
+    grid-template-columns: auto 3em 2em auto 3em;
+    padding: 2em 1em 2em 0;
 }
 
 .charsheet .details-grid>div {
